# iot_smart_home

./: .env.example  .env.prod  .gitignore  Dockerfile  README.md  docker-compose.emqx.yml  docker-compose.haas.yml  docker-compose.http.yml  docker-compose.mqtt.yml  docker-compose.sensors.yml  docker-compose.yml  generate_aes128_key.sh  pyproject.toml
controller/: controller.py
device/: __main__.py  schemas.py  settings.py
device/data_publisher/: mqtt.py
device/sensors/: abc.py  base.py  climate.py  lamp.py  motion.py
device/simulator/: base.py
homeassistant/config/: configuration.yaml
homeassistant/custom_components/hello_service/: __init__.py  manifest.json
iot_smart_home/: crypt.py  schemas.py  settings.py
iot_smart_home/controller/: controller.py
iot_smart_home/core/: _logging.py  schemas.py
iot_smart_home/device/: __main__.py  base.py  schemas.py  settings.py
iot_smart_home/device/data_publisher/: base.py  mqtt.py
iot_smart_home/device/sensors/: climate.py  lamp.py  motion.py
iot_smart_home/device/simulator/: base.py
iot_smart_home/devices/: base.py  gateway.py
iot_smart_home/devices/controller/: __main__.py
iot_smart_home/devices/controller/templates/: index.html
iot_smart_home/devices/gateway/: __main__.py
iot_smart_home/devices/http/: settings.py
iot_smart_home/devices/http/controller/: __main__.py  settings.py
iot_smart_home/devices/http/controller/templates/: index.html
iot_smart_home/devices/http/controller/web/: application.py  lifetime.py
iot_smart_home/devices/http/controller/web/api/: router.py
iot_smart_home/devices/http/sensors/: base.py  climate.py  lamp.py  motion.py
iot_smart_home/devices/mqtt/: base.py  settings.py
iot_smart_home/devices/mqtt/controller/: __main__.py
iot_smart_home/devices/mqtt/securiy/: crypt.py
iot_smart_home/devices/mqtt/sensors/: base.py  climate.py  lamp.py  motion.py
iot_smart_home/devices/mqtt/voice_assistant/: __main__.py  dispatcher.py  loader.py  template_engine.py  ui_commands.py
iot_smart_home/devices/mqtt/voice_assistant/handlers/: utils.py
iot_smart_home/devices/sensors/: base.py  climate.py  lamp.py  motion.py
iot_smart_home/publisher/: mqtt_publisher.py
(+3 files in other folders)
